style.css
html {
    background-color: #FFF8E8;
    font-size: 20px;
    font-family: 'Fira Sans', sans-serif;
  }

div {
    width: 600px;
    margin: 100px auto;
}
  
p {
    font-size: 1.0rem;
    line-height: 1.5rem;
    color: #333333
}

p2 {
    font-size: 0.8rem;
    line-height: 1.0rem;
    color: #333333
}

h1 {
    
}

a {
    text-decoration: none;
    color: #6474ff;
    ;
}
a:hover {
    border-bottom: 2px dotted #6474ff
}

  ul {
    background: ;
    padding: 10px;
    border: 1px solid black;
  }
  
  li {
    margin-left: 20px;
  }

  div.gallery {
    border: 1px solid #ccc;
  }
  
  div.gallery:hover {
    border: 1px solid #777;
  }
  
  div.gallery img {
    width: 100%;
    height: auto;
  }
  
  div.desc {
    padding: 15px;
    text-align: center;
  }
  
  .responsive {
    padding: 0 6px;
    float: left;
    width: 24.99999%;
  }

  .footer {
    padding-top: 60px;
    padding-bottom: 40px;
    -webkit-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
    background-color: #fff8e8;
    text-align: center;
  }

  .footer-container {
    margin-left: auto;
    margin-right: auto;
    max-width: 940px;
  }
  
  @media only screen and (max-width: 700px) {
    .responsive {
      width: 49.99999%;
      margin: 6px 0;
    }
  }
  
  @media only screen and (max-width: 500px) {
    .responsive {
      width: 100%;
    }
  }
  
  .clearfix:after {
    content: "";
    display: table;
    clear: both;
  }

  @media only screen and (max-width: 640px) {
    div {
      width: 90%;
      margin: 10% auto;
    }
    h1 {
      font-size: 40px !important;
      line-height: 1.4rem;
    }

    h2 {
      font-size: 20px;
      line-height: 1.2rem;
    }

    
    p {
      font-size: 1.0rem;
      line-height: 1.3rem;
    }
  }

  

